--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,3 +66,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+  assets:
+      - assets/img/fotoperfil.jpg
+  fonts:
+    - family: Lato Regular
+      fonts:
+      - asset: fonts/Lato-Regular.ttf
